added nav and header section

--- a/index.html
+++ b/index.html
@@ -5,10 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer-gear-projects</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <!--1st part -->
+    <header class="header poppins">
+        <nav>
+            <h3 class="nav-title">Influencer products</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign up</a></li>
+                <li><a href="">Log In</a></li>
+                <li class="glass"><i class="fa-solid fa-magnifying-glass"></i></li>
+                <li><i class="fa-solid fa-cart-shopping"></i></li>
+            </ul>
+            <ul class="nav-hamburger">
+                <i class="fa-solid fa-bars"></i>
+            </ul>
+        </nav>
+        <div class="banner-content">
+            <div class="banner-text">
+                <h1 class="banner-title">Start your Journey as Influencer</h1>
+                <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nihil, dolorum atque neque sit quis ratione</p>
+                <button class="btn"><span class="btn-text">Preebook now</span><i class="fa-regular fa-share-from-square"></i></button>
+            </div>
+            <div class="img">
+                <div class="banner-img">
+                    <img src="images/main-camera.png" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+    <!-- 2nd part -->
+    </main>
     <footer></footer>
 </body>
 </html>
