--- a/index.html
+++ b/index.html
@@ -41,6 +41,197 @@
     </header>
     <main>
     <!-- 2nd part -->
+    <section class="brands-logo">
+        <hr>
+        <div class="logo-name">
+            <img src="logos/Alibaba.svg" alt="">
+            <img src="logos/Amazon.svg" alt="">
+            <img src="logos/Daraz.pk Logo.svg" alt="">
+            <img src="logos/Ebay.svg" alt="">
+            <img src="logos/Rakuten.svg" alt="">
+            <img src="logos/Walmart.svg" alt="">
+            <img src="logos/Target.svg" alt="">
+            
+        </div>
+        <hr>
+    </section>
+    <!-- 3rd part -->
+    <section class="popular-collection">
+            <h3 class="popular-collection-title">Popular Collection</h3>
+            <div class="gallery">
+                <div class="card">
+                    <div>
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="popular-text">
+                        <h1>Flex Tripod</h1>
+                        <h2>$50.48</h2>
+                    </div>
+                    <div class="popular-icon">
+                        <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        </span>4.99
+                    </div>
+                    <p class="popular-description">Wordwide shifting available<br>Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="images/mic.png" alt="">
+                    </div>
+                    <div class="popular-text">
+                        <h1>Microphone</h1>
+                        <h2>$120.25</h2>
+                    </div>
+                    <div class="popular-icon">
+                        <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        </span>4.99
+                    </div>
+                    <p class="popular-description">Wordwide shifting available<br>Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="popular-text">
+                        <h1>Airbuds</h1>
+                        <h2>$100.00</h2>
+                    </div>
+                    <div class="popular-icon">
+                        <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        </span>4.99
+                    </div>
+                    <p class="popular-description">Wordwide shifting available<br>Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="images/drone.png" alt="">
+                    </div>
+                    <div class="popular-text">
+                        <h1>Drone</h1>
+                        <h2>$980.25</h2>
+                    </div>
+                    <div class="popular-icon">
+                        <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        </span>4.99
+                    </div>
+                    <p class="popular-description">Wordwide shifting available<br>Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="images/lights.png" alt="">
+                    </div>
+                    <div class="popular-text">
+                        <h1>Light Setup</h1>
+                        <h2>$1200.00</h2>
+                    </div>
+                    <div class="popular-icon">
+                        <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        </span>4.99
+                    </div>
+                    <p class="popular-description">Wordwide shifting available<br>Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="images/setup.png" alt="">
+                    </div>
+                    <div class="popular-text">
+                        <h1>Photoshoot set</h1>
+                        <h2>$820.40</h2>
+                    </div>
+                    <div class="popular-icon">
+                        <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        </span>4.99
+                    </div>
+                    <p class="popular-description">Wordwide shifting available<br>Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="images/camera.png" alt="">
+                    </div>
+                    <div class="popular-text">
+                        <h1>Vlogging Camera</h1>
+                        <h2>$1800.80</h2>
+                    </div>
+                    <div class="popular-icon">
+                        <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        </span>4.99
+                    </div>
+                    <p class="popular-description">Wordwide shifting available<br>Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="images/single-light.png" alt="">
+                    </div>
+                    <div class="popular-text">
+                        <h1>Green Screen</h1>
+                        <h2>$25.48</h2>
+                    </div>
+                    <div class="popular-icon">
+                        <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        </span>4.99
+                    </div>
+                    <p class="popular-description">Wordwide shifting available<br>Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <div>
+                        <img src="images/action.png" alt="">
+                    </div>
+                    <div class="popular-text">
+                        <h1>Action Camera</h1>
+                        <h2>$380.00</h2>
+                    </div>
+                    <div class="popular-icon">
+                        <span style="color: orange;">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        </span>4.99
+                    </div>
+                    <p class="popular-description">Wordwide shifting available<br>Buyers protection possible!</p>
+                </div>
+            </div>
+    </section>
     </main>
     <footer></footer>
 </body>
