--- a/index.html
+++ b/index.html
@@ -231,8 +231,24 @@
                     <p class="popular-description">Wordwide shifting available<br>Buyers protection possible!</p>
                 </div>
             </div>
+            <p class="see-more">See More <i class="fa-regular fa-share-from-square"></i> </p>
+    </section>
+    <!-- 4th part -->
+    <section class="featured-product">
+        <div>
+            <img src="images/gear.png" alt="">
+        </div>
+        <div class="featured-text">
+            <h2 class="featured-title">Featured products at one place</h2>
+            <p class="featured-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button class="featured-btn ">Join Now <i class="fa-regular fa-share-from-square"></i></button>
+        </button>
+        </div>
     </section>
     </main>
-    <footer></footer>
+    <!-- 5th part -->
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
