added footer section

--- a/index.html
+++ b/index.html
@@ -248,7 +248,17 @@
     </main>
     <!-- 5th part -->
     <footer class="footer">
-
+        <div class="footer-text">
+            <p class="footer-title">Influencer products</p>
+            <p class="footer-description">Copyright © 2020  influencer products</p>
+            <p class="footer-line">All rights reserved</p>
+            <div class="footer-icon">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-square-whatsapp"></i>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
